--- a/_posts/2019-02-23-시스템 프로그래밍.markdown
+++ b/_posts/2019-02-23-시스템 프로그래밍.markdown
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "시스템 프로그래밍"
-subtitle:   "몰라임마ㅏ"
+title:  "컴퓨터 구조"
+subtitle:   "몰라여ㅕㅇ"
 categories: doc
-tags: 시스템 프로그래밍
+tags: computer architecture
 ---
 
 
