--- a/_posts/2019-02-23-시작.markdown
+++ b/_posts/2019-02-23-시작.markdown
@@ -2,8 +2,8 @@
 layout: post
 title:  "나는 금붕어"
 subtitle:   "ㅠㅡㅜ"
-categories: algo
-tags: algorithm
+categories: essay
+tags: essay
 ---
 
 ---------
