--- a/_posts/2019-02-23-시작.markdown
+++ b/_posts/2019-02-23-시작.markdown
@@ -7,8 +7,8 @@ tags: essay
 ---
 
 ---------
-적어라.
-=============
+# 적어라.
+
 <br>
 
 >내일의 나는 분명히 기억 못한다.
@@ -38,4 +38,4 @@ tags: essay
 
 <br><br><br>
 
-기록하는 습관을 들이자...
+기록하는 습관을 들이자... :+1:
