--- a/_posts/2019-02-24-단어.markdown
+++ b/_posts/2019-02-24-단어.markdown
@@ -7,6 +7,7 @@ tags: word
 ---
 
 consistent 일관된  
-overall 전체의
+overall 전체의  
 represent 말하다, 표현하다  
-assume 가정하다, 취하다
+assume 가정하다, 취하다  
+opscure 모호한
