--- a/_posts/2019-02-23-구종만_189~.markdown
+++ b/_posts/2019-02-23-구종만_189~.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[189~] 쿼드 트리 뒤집기 부터"
+title:  "07. 분할 정복"
 subtitle:   "구종만"
 categories: book
 tags: jongman
@@ -8,9 +8,9 @@ tags: jongman
 
 ## 7.2 문제: 쿼드 트리 뒤집기 (하)
 
-쿼드 트리로 압축된 흑백 그림을 상하로 뒤집어서 압축 후 출력하기
+>쿼드 트리로 압축된 흑백 그림을 상하로 뒤집어서 압축 후 출력하기
 
-> 생각의 전환이 놀라웠음
+생각의 전환이 놀라웠음
 
 ```cpp
 string reverse(string::iterator& it) {
@@ -25,14 +25,14 @@ return string("x") + lowerLeft + lowerRight + upperLeft + upperRight;
 } 
 ```
 
-> ㄷㄷ...
+ㄷㄷ...
 
 ## 7.4 문제: 울타리 잘라내기 (중)
 
-길이가 다른 나무 판자들 세워놓고 가장 큰 직사각형 구하기
+> 길이가 다른 나무 판자들 세워놓고 가장 큰 직사각형 구하기
 
-> n^2 방법이 먼저 떠오른다  
-> 갈 길이 멀어따..
+n^2 방법이 먼저 떠오른다  
+갈 길이 멀어따..
 
 ```cpp
 vector<int> h;
@@ -58,13 +58,13 @@ int solve(int left, int right) {
 }
 ```
 
-> 방법은 비스무리하게 생각했으나 구현에 자신이 없었다.  
-> 막상 풀이를 보면 증말 별거 아닌데 구현할 때는 내가 쓴 코드에 확신도 없고 자신도 없다 ..ㅠㅡㅜ  
-> 많이 풀어보고 익숙해지는게 중요한 듯 싶다.
+방법은 비스무리하게 생각했으나 구현에 자신이 없었다.  
+막상 풀이를 보면 증말 별거 아닌데 구현할 때는 내가 쓴 코드에 확신도 없고 자신도 없다 ..ㅠㅡㅜ  
+많이 풀어보고 익숙해지는게 중요한 듯 싶다.
 
 
 ## 7.7 풀이: 팬미팅  
-남성 팬과는 악수, 모든 멤버가 팬과 포옹하는 횟수.  
+> 남성 팬과는 악수, 모든 멤버가 팬과 포옹하는 횟수.  
 카라츠바 알고리즘을 활용
 
 ```cpp
@@ -81,4 +81,4 @@ int hugs(const string& members, const string& fans) {
     return allHugs;
 }
 ```
-
+카라츠바 복습 ㅋ
