--- a/_posts/2019-02-24-테트리스.markdown
+++ b/_posts/2019-02-24-테트리스.markdown
@@ -17,3 +17,8 @@ tags: tetris
 ### DWORD  
 > byte, word, dword, qword
 
+### 간단한 게임 엔진 루프  
+1. Game Timing : 컴퓨터들의 차이 때문에 Timing 을 핸들링 한다.
+2. Input : 사용자의 입력 처리
+3. Game Logic : 벽돌이 떨어지고, 바닥과 부딪히고, 점수가 나는 과정
+4. Render Output : 화면에 나타내기
