--- a/_posts/2019-02-27-구종만_동적.markdown
+++ b/_posts/2019-02-27-구종만_동적.markdown
@@ -116,3 +116,45 @@ int path(int y, int x) {
 ```
 완전 탐색 꼴이 되지 않도록 조심하자
 
+#### 최적 부분 구조  
+> 각 부분 문제의 최적해만 있으면 전체 문제의 최적해를 쉽게 얻어낼 수 있는 경우의 구조
+
+## 예제: 최대 증가 부분 수열 (하)
+
+완전 탐색  
+```cpp
+int lis(const vector<int>& A) {
+    if(A.empty()) return 0;
+    int ret = 0;
+    for(int i = 0; i < A.size(); ++i) {
+        vector<int> B;
+        for(int j = i+1; j < A.size(); ++j)
+            if(A[i] < A[j])
+                B.push_back(A[j]);
+        ret = max(ret, 1 + lis(B));
+    }
+    return ret;
+}
+```
+
+동적 계획법  
+```cpp
+int n;
+int cache[100], S[100];
+int lis(int start) {
+    int& ret = cache[start];
+    if(ret != -1) return ret;
+    ret = 1;
+    for(int next = start+1; next < n; ++next)
+        if(S[start] < S[next])
+            ret = max(ret, lis(next) + 1);
+    return ret;
+}
+int maxLen = 0;
+for(int begin = 0; begin < n; ++begin)
+    maxLen = max(maxLen, lis(begin));
+```
+
+## 8.5 문제: 합친 LIS (하)
+
+> '1 9 4'와 '3 4 7' -> '1 3 4 7 9'
