--- a/_posts/2019-02-24-단어.markdown
+++ b/_posts/2019-02-24-단어.markdown
@@ -10,4 +10,7 @@ consistent 일관된
 overall 전체의  
 represent 말하다, 표현하다  
 assume 가정하다, 취하다  
-opscure 모호한
+opscure 모호한  
+validation 확인  
+candidate 후보자  
+valid 유효한  
