--- a/_posts/2019-02-24-팁-정리된사이트.markdown
+++ b/_posts/2019-02-24-팁-정리된사이트.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "잘 정리해 놓은"
-subtitle:   "ㅠㅡㅜ"
+title:  "[Tip] 잘 정리해 놓은 사이트"
+subtitle:   "[Tip] 잘 정리해 놓은 사이트"
 categories: tip
 tags: extra
 ---
