--- a/_posts/2019-02-28-팁-유용한 사이트 정리.markdown
+++ b/_posts/2019-02-28-팁-유용한 사이트 정리.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "유용한 사이트 정리"
-subtitle:   "ㅎ"
+title:  "[Tip] 유용한 사이트 정리"
+subtitle:   "[Tip] 유용한 사이트 정리"
 categories: tip
 tags: bookmark
 ---
