--- a/_posts/2019-02-27-구종만_동적.markdown
+++ b/_posts/2019-02-27-구종만_동적.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "08. 동적 계획법"
-subtitle:   "구종만"
+title:  "[알고리즘 문제해결전략] 08. 동적 계획법"
+subtitle:   "[알고리즘 문제해결전략] 08. 동적 계획법"
 categories: book
 tags: jongman
 ---
