--- a/_posts/2019-02-23-구종만_분할.markdown
+++ b/_posts/2019-02-23-구종만_분할.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "07. 분할 정복"
-subtitle:   "07. 분할 정복"
+title:  "[알고리즘 문제 해결 전략] 07. 분할 정복"
+subtitle:   "[알고리즘 문제 해결 전략] 07. 분할 정복"
 categories: book
 tags: jongman
 ---
