--- a/_posts/2019-02-27-구종만_동적.markdown
+++ b/_posts/2019-02-27-구종만_동적.markdown
@@ -200,3 +200,17 @@ int classify(int a, int b) {
   }
 }
 ```
+
+## 8.9 문제: Quantization (중)  
+
+> 원본 수열의 포함된 수들의 범위가 1000 이하의 자연수 이므로 부분 문제가 너무 많아져서 완전 탐색으로는 불가능
+
+
+>답의 형태를 제한해야 함
+
+
+>한 개의 구간에 대한 답을 먼저 찾는다
+
+```cpp
+
+```
