--- a/_posts/2019-02-27-구종만_동적.markdown
+++ b/_posts/2019-02-27-구종만_동적.markdown
@@ -212,5 +212,68 @@ int classify(int a, int b) {
 >한 개의 구간에 대한 답을 먼저 찾는다
 
 ```cpp
+const INF = 987654321;
+int n;
+int A[101], pSum[101], pSqSum[100];
+void precalc() {
+  sort(A, A+n);
+  pSum[0] = A[0];
+  pSqSum[0] = A[0] * A[0];
+  for(int i = 1; i < n; ++i) {
+    pSum[i] = pSum[i-1] + A[i];
+    pSqSum[i] = pSqSum[i-1] + A[i] * A[i];
+  }
+}
+int minError(int lo, int hi) {
+  int sum = pSum[hi] - (lo == 0 ? 0 : pSum[lo-1]);
+  int sqSum = pSqSum[hi] - (lo == 0 ? 0 : pSqSum[lo-1]);
+  int m = (int)(0.5 + (double)sum / (hi - lo + 1));
+  int ret = sqSum - 2 * m * sum + m * m * (hi - lo + 1);
+  return ret; 
+}
+int cache[101][11];
+int quantize(int from, int parts) {
+  if(from == n) return 0;
+  if(parts == 0) return INF;
+  int& ret = cache[from][parts];
+  if(ret != -1) return ret;
+  ret = INF;
+  for(int partSize = 1; from + partSize <= n; ++partSize) {
+    ret = min(ret, minError(from, from + partSize - 1) + 
+                   quantize(from + partSize, part - 1));
+  }
+  return ret;
+}
+```
 
+## 예제: 타일링 방법의 수 세기 (하)  
+> 2 x n 크기의 사각형을 2 x 1 크기의 타일로 채우는 방법의 수  
+
+```cpp
+const int MOD = 1000000007;
+int cache[101];
+int tiling(int width) {
+  if(width <= 1) return 1;
+  int& ret = cache[width];
+  if(ret != -1) return ret;
+  return ret = (tiling(width-2) + tiling(width-1)) % MOD;
+}
+```
+
+
+## 예제: 삼각형 위의 최대 경로 개수 세기 (중) 8.4++  
+> 8.4 절 문제는 최대 경로의 합을 구했다.  
+> 이 최대 경로의 개수를 구해보자
+
+```cpp
+int countCache[100][100];
+int count(int y, int x) {
+  if(y == n-1) return 1;
+  int& ret = countCache[y][x];
+  if(ret != -1) return ret;
+  ret = 0;
+  if(path(y+1, x+1) >= path(y+1, x)) ret += count(y+1, x+1);
+  if(path(y+1, x+1) <= path(y+1, x)) ret += count(y+1, x);
+  return ret;
+}
 ```
