--- a/_posts/2019-02-27-구종만_동적.markdown
+++ b/_posts/2019-02-27-구종만_동적.markdown
@@ -277,3 +277,21 @@ int count(int y, int x) {
   return ret;
 }
 ```
+
+
+## 예제: 우물을 기어오르는 달팽이
+
+```cpp
+int n,m;
+int cache[MAX_N][2*MAX_N+1];
+// 달팽이가 days일 동안 climbed미터를 기어올라 왔다고 할 때,
+// m일 전까지 n미터를 기어올라갈 수 있는 경우의 수
+int climb(int days, int climbed) {
+  if(days == m) return climbed >= n ? 1 : 0;
+  int& ret = cache[days][climbed];
+  if(ret != -1) return ret;
+  return ret = climb(days+1, climbed+1) + climb(days+1, climbed+2);
+}
+// 얻은 경우의 수를 2^m 으로 나누면 됨
+```
+
