--- a/_posts/2019-02-24-단어.markdown
+++ b/_posts/2019-02-24-단어.markdown
@@ -14,4 +14,5 @@ opscure 모호한
 validation 확인  
 candidate 후보자  
 valid 유효한  
-progressive 점진적인(등차수열)
+progressive 점진적인(등차수열)  
+symmetric 대칭인 asymmetric 비대칭인  
