--- a/_posts/2019-02-28-팁-유용한 사이트 정리.markdown
+++ b/_posts/2019-02-28-팁-유용한 사이트 정리.markdown
@@ -21,3 +21,8 @@ tags: bookmark
 ### flatUiColors   
 > 다양한 색깔 정리  
 > https://flatuicolors.com/
+
+### JSONlint  
+> jsonlint 형식이 맞는지 확인해줌  
+> https://jsonlint.com/
+
