--- a/_posts/2019-03-04-구종만_18-선형자료구조.markdown
+++ b/_posts/2019-03-04-구종만_18-선형자료구조.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "[알고리즘 문제 해결 전략] 18. 선형 자료 구조"
-subtitle:   "[알고리즘 문제 해결 전략] 18. 선형 자료 구조"
+title:  "[알고리즘 문제 해결 전략] 09. 동적 계획법 테크닉"
+subtitle:   "[알고리즘 문제 해결 전략] 09. 동적 계획법 테크닉"
 categories: book
 tags: jongman
 ---
@@ -25,4 +25,3 @@ void josephus(int n, int k) {
   cout << survivors.front() << " " << survivors.back() << endl;
 }
 ```
-
