--- a/_posts/2019-03-04-Linux.markdown
+++ b/_posts/2019-03-04-Linux.markdown
@@ -15,3 +15,27 @@ tags: linux
 ### MIT 라이선스  
 > 라이선스가 없는거나 마찬가지
 
+
+### 가상 환경 설치  
+
+    Virtual Box 설치 (oracle)  
+    Ubuntu Server 다운로드  
+-----
+
+
+    ~$  : 일반 유저
+    ~#  : 관리자 계정
+
+    sudo su - root : 관리자 계정으로 바꿈
+
+
+### 리눅스 파일 시스템  
+
+> 설치된 프로그램(usr/)의 설정(etc/) 그리고 프로그램이 만드는 값들(var/)
+
+> bin/ 은 모든 계정에서 쓰는 실행 파일, sbin/ 은 어드민 계정 실행 파일 두는 곳
+
+> tmp/ 운영체제든 프로그램 이든 임시로 데이터를 풀었다 삭제했다가 하는 곳
+
+> sys/ 시스템에 대한 설정들을 두는 곳
+
