--- a/_posts/2019-03-04-구종만_19-큐와스택데크.markdown
+++ b/_posts/2019-03-04-구종만_19-큐와스택데크.markdown
@@ -6,3 +6,27 @@ categories: book
 tags: jongman
 ---
 
+## 예제: 스택을 이용한 울타리 자르기
+
+```cpp
+vector<int> h;
+int solveStack() {
+  stack<int> remaining;
+  h.push_back(0);
+  int ret = 0;
+  for(int i = 0; i < h.size(); ++i) {
+    while(!remaining.empty() && h[remaining.top()] >= h[i]) {
+      int j = remaining.top();
+      remaining.pop();
+      int width = -1;
+      if(remaining.empty())
+        width = i;
+      else
+        width = (i - remaining.top() - 1);
+      ret = max(ret, h[j] * width);
+    }
+    remaining.push(i);
+  }
+  return ret;
+}
+```
