--- a/_posts/2019-03-05-[운영체제] 처음.markdown
+++ b/_posts/2019-03-05-[운영체제] 처음.markdown
@@ -1,11 +1,11 @@
 ---
 layout: post
-title:  "[운영체제] 운영체제 구조 - 시스템콜, 사용자 모드"
-subtitle:   "[운영체제] 운영체제 구조 - 시스템콜, 사용자 모드"
+title:  "[운영체제] 운영체제 구조, 스케쥴링"
+subtitle:   "[운영체제] 운영체제 구조, 스케쥴링"
 categories: study
 tags: os
 ---
-
+시스템콜, 사용자모드와 커널모드, 멀티 태스킹, 멀티 프로세싱, 멀티 프로그래밍
 
 ## [ 운영체제 구조 ]
 
