--- a/_posts/2019-03-06-[운영체제] 스케쥴링 알고리즘.markdown
+++ b/_posts/2019-03-06-[운영체제] 스케쥴링 알고리즘.markdown
@@ -45,3 +45,49 @@ tags: os
 - 동적 우선순위
   - 스케쥴러가 상황에 따라 우선순위를 동적으로 변경
 
+### Round Robin 스케쥴러  
+- 여러 프로세스가 각자 블록 한 개씩 번갈아 가면서 실행
+- 시분할 시스템 기반
+
+### 프로세스 상태  
+> ready -> running -> block state
+
+- Ready State Queue
+- Running State Queue
+- Block State Queue
+
+CPU 가 아무것도 안할 때 = IDLE 상태
+
+
+### 선점형, 비선점형 스케쥴러  
+- 번갈아서 가능, 번갈아서 불가능
+
+
+------
+
+### 인터럽트 
+
+> CPU 는 한 줄의 코드만 읽는다.
+> 
+> 그래서 어떤 일이 생기면 중간에 알려줘야 한다.
+
+- IO Device 와의 커뮤니케이션 
+  - 저장매체에서 데이터 처리 완료 시, (block -> ready)
+  
+- 예외 상황 핸들링
+
+#### 내부 인터럽트 :
+- 0으로 나눔
+- 사용자 모드에서 허용되지 명령 or 공간 접근 시
+- 오버플로우
+
+#### 외부 인터럽트 :
+- 전원, 기계 문제
+- IO 문제, Timer 이벤트
+
+### 시스템 콜 인터럽트
+> 시스템콜 실행을 위해서는 강제로 코드에 인터럽트 명령을 넣어, CPU 에게 실행시켜야 한다.
+
+    mov eax, 1  // 시스템콜 번호를 넣음
+    mov ebx, 0  // 시스템콜에 해당하는 인자값을 넣음
+    int 0x80  // 소프트웨어 인터럽트 명령
