--- a/_posts/2019-03-06-[운영체제] 스케쥴링 알고리즘.markdown
+++ b/_posts/2019-03-06-[운영체제] 스케쥴링 알고리즘.markdown
@@ -91,3 +91,26 @@ CPU 가 아무것도 안할 때 = IDLE 상태
     mov eax, 1  // 시스템콜 번호를 넣음
     mov ebx, 0  // 시스템콜에 해당하는 인자값을 넣음
     int 0x80  // 소프트웨어 인터럽트 명령
+
+- 시스템콜 인터럽트 명령을 호출하면서 0x80(<int><op-code>)값을 넘겨줌
+  - CPU는 사용자 모드를 커널 모드로 바꿔줌
+  - IDT(Interrupt Descriptor Table)에서 0x80에 해당하는 주소(함수)를 찾아서 실행함
+  - system_call() 에서 eax로부터 시스템콜 번호를 찾아서, 해당 번호에 맞는 시스템콜 함수로 이동
+
+
+    | %eax | kernel function(system call) | %ebx |
+    |:--------|--------:|--------:|
+    | 1 | sys_exit (exit) | int |
+    | 2 | sys_fork (fork) | struct pt_regs |
+    | 3 | sys_read (read) | unsigned int |
+    | 4 | sys_write (write) | unsigned int |
+    | 5 | sys_open (open) | const char* |
+
+  - 해당 시스템콜 함수 실행 후, 커널 -> 사용자 전환, 다시 해당 프로세스 다음 코드 진행
+
+### 인터럽트와 IDT  
+- 인터럽트는 미리 정의되어 각각 번호(이벤트)와 실행 코드를 가리키는 주소가 기록되있음
+- 운영체제가 IDT에 컴퓨터 부팅시 운영체제 내부 코드로 기록(커널 영역)
+
+timer_interrupt() 함수로 선점형 스케쥴러 구현
+
