--- a/_posts/자료구조/2019-03-08-[자료구조] 스택.markdown
+++ b/_posts/자료구조/2019-03-08-[자료구조] 스택.markdown
@@ -90,4 +90,28 @@ int queueIsFull()
   if ((rear + 1) % MAX_N == front) return 1;
   else return 0;
 }
+
+int queueEnqueue(int value)
+{
+  if (queueIsFull()) {
+    printf("queue is full!");
+    return 0;
+  }
+  queue[rear] = value;
+  rear++;
+  if (rear == MAX_N) rear = 0;
+
+  return 1;
+}
+
+int queueDequeue(int *value)
+{
+  if (queueIsEmpty()) {
+    printf("queue is empty!");
+    return 0;
+  }
+  *value = queue[front];
+  front++;
+  if (front )
+}
 ```
