--- a/_posts/자료구조/2019-03-08-[자료구조] 스택.markdown
+++ b/_posts/자료구조/2019-03-08-[자료구조] 스택.markdown
@@ -56,11 +56,6 @@ int stackPop(int *value)
 
   return 1;
 }
-
-int main()
-{
-
-}
 ```
 
 ## 큐
@@ -100,7 +95,6 @@ int queueEnqueue(int value)
   queue[rear] = value;
   rear++;
   if (rear == MAX_N) rear = 0;
-
   return 1;
 }
 
@@ -112,6 +106,8 @@ int queueDequeue(int *value)
   }
   *value = queue[front];
   front++;
-  if (front )
+  if (front MAX_N) front = 0;
+  return 1;
 }
 ```
+
