--- a/_posts/알고리즘문제해결전략/2019-02-23-구종만_09-동적-테크닉.markdown
+++ b/_posts/알고리즘문제해결전략/2019-02-23-구종만_09-동적-테크닉.markdown
@@ -1,28 +1,9 @@
 ---
 layout: post
-title:  "[알고리즘 문제 해결 전략] 18. 선형 자료 구조"
-subtitle:   "[알고리즘 문제 해결 전략] 18. 선형 자료 구조"
+title:  "[알고리즘 문제 해결 전략] 09. 동적 테크닉"
+subtitle:   "[알고리즘 문제 해결 전략] 09. 동적 테크닉"
 categories: book
 tags: jongman
 ---
 
-## 18.5 문제: 조세푸스 문제 (하)  
-
-```cpp
-void josephus(int n, int k) {
-  list<int> survivors;
-  for(int i = 1; i <= n) survivors.push_back[i];
-  list<int>::iterator kill = survivors.begin();
-  while(n > 2) {
-    kill = survivors.erase[kill];
-    if(kill == survivors.end()) kill = survivors.begin();
-    --n;
-    for(int i = 0; i < k-1; ++i) {
-      ++kill;
-      if(kill == survivors.end()) kill = survivors.begin()
-    }
-  }
-  cout << survivors.front() << " " << survivors.back() << endl;
-}
-```
 
