--- a/_posts/알고리즘/알고리즘 중급/2019-03-15-DP 2.markdown
+++ b/_posts/알고리즘/알고리즘 중급/2019-03-15-DP 2.markdown
@@ -17,7 +17,12 @@ int RGB(int pos, int prev = 3) {
     if (pos == N) return ret = 0;
     ret = INF;
     for (int i = 0; i < 3; i++)
-        if (prev != i) ret = min(ret, RGB(pos+1, i) + cost[pos][i]);
+        if (prev != i) 
+            ret = min(ret, RGB(pos+1, i) + cost[pos][i]);
+     // if (prev != i && ret > RGB(pos+1, i) + cost[pos][i]) {
+     //     ret = RGB(pos+1, i) + cost[pos][i];
+     //     choice[pos][prev] = i;
+        }
     return ret;
 }
 // 최소 비용의 건물 색상 배치 출력
