--- a/_posts/알고리즘/알고리즘 중급/2019-03-15-DP 2.markdown
+++ b/_posts/알고리즘/알고리즘 중급/2019-03-15-DP 2.markdown
@@ -120,11 +120,12 @@ int SNS(int curr, bool early) {
     int notpick = INF, pick = 1;
     for (int next: child[curr])
         pick += SNS(next, true);
-    if (!early) {
+    if (early) {
         notpick = 0;
         for (int next: child[curr])
             notpick += SNS(next, false);
     }
+    // picked[curr][early] = (pick < notpick);
     return ret = min(notpick, pick);
 }
 
@@ -148,17 +149,54 @@ int main() {
 </details>
 
 <details>
-<summary> </summary>
+<summary> 이진수 찾기 - 2248</summary>
 <div markdown="1">   
 
+D[N][L] 을 N자리 이진수들 중에서 L개 이하의 비트만 1로 이루어진 이진수의 개수라고 정의  
+D[N][L] = D[N-1][L] + D[N-1][L-1]   
+첫 자리에 1을 쓰냐 마냐
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
+int D[32][32];
+char result[32];
+
+int binary(int n, int m) {
+    int &ret = D[n][m];
+    if (ret != -1) return ret;
+    if (m == 0 || n == 0) return ret = 1;
+    ret = binary(n-1, m);
+    if (m > 0) ret += binary(n-1, m-1);
+    return ret;
+}
+
+void skip(int n, int m, int k, int p) {
+    if (n == 0) return;
+    if (m == 0) {
+        for (int i = 0; i < n; i++)
+            result[p+i] = '0';
+        return;
+    }
+    int pivot = binary(n-1, m);
+    if (k < pivot) {
+        result[p] = '0';
+        skip(n-1, m, k, p+1);
+    }
+    else {
+        result[p] = '1';
+        skip(n-1, m-1, k-pivot, p+1);
+    }
+}
 
 int main() {
     ios::sync_with_stdio(0);
     cin.tie(0);
-
+    int N, L;
+    long long I;
+    cin >> N >> L >> I;
+    memset(D, -1, sizeof(D));
+    skip(N, L, I-1, 0);
+    put(result);
 }
 ```  
 </div>
