--- a/_posts/알고리즘/알고리즘 중급/2019-03-15-DP 2.markdown
+++ b/_posts/알고리즘/알고리즘 중급/2019-03-15-DP 2.markdown
@@ -6,7 +6,7 @@ categories: algo
 tags: middle
 ---
 <details>
-<summary> RGB 거리(+a) - 1149</summary>
+<summary> <b> RGB 거리(+a) - 1149 </b></summary>
 <div markdown="1">   
 
 ```cpp
@@ -58,14 +58,16 @@ void trackAnswer(int pos, int prev=3){
 
 
 <details>
-<summary> LCS 2 - 9252</summary>
+<summary> <b>LCS 2 - 9252</b></summary>
 <div markdown="1">   
+
+- 두 수열의 공통된 최장 길이 수열 구하고 출력하기. DP track
 
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
 char S1[1001], S2[1001];
-int len1, len2, cache[1000][1000], choose[1000];
+int len1, len2, cache[1000][1000], choose[1000][1000];
 
 int LCS(int pos1, int pos2) {
     if (pos1 == len1 || pos2 == len2) return 0;
@@ -74,7 +76,32 @@ int LCS(int pos1, int pos2) {
     ret = LCS(pos1+1, pos2);
     int temp = LCS(pos1, pos2+1);
     if (ret < temp) {
-        ret 
+        ret = temp;
+        choose[pos1][pos2] = 0;
+    }
+    else choose[pos1][pos2] = 1;
+    if (S1[pos1] == S2[pos2]) {
+        temp = LSC(pos+1, pos+2) + 1;
+        if (ret < temp) {
+            ret = temp;
+            choose[pos1][pos2] = 2;
+        }
+    }
+    return ret;
+}
+
+void tracker(int pos1, int pos2) {
+    if (pos1==len1 || pos2==len2) return;
+    switch (choose[pos1][pos2]) {
+    case 0:
+            track(pos1+1, pos2);
+            break;
+    case 1:
+            track(pos1, pos2+1);
+            break;
+    default:
+            putchar(S1[pos1]);
+            track(pos1+1, pos2+1);
     }
 }
 
@@ -85,13 +112,14 @@ int main() {
     len2 = strlen(S2);
     memset(cache, -1, sizeof(cache));
     cout << LCS(0, 0);
+    track(0, 0);
 }
 ```  
 </div>
 </details>
 
 <details>
-<summary> 사회망 서비스(SNS) - 2533</summary>
+<summary> <b>사회망 서비스(SNS) - 2533</b></summary>
 <div markdown="1">   
 
 ```cpp
@@ -149,7 +177,7 @@ int main() {
 </details>
 
 <details>
-<summary> 이진수 찾기 - 2248</summary>
+<summary> <b>이진수 찾기 - 2248</b></summary>
 <div markdown="1">   
 
 D[N][L] 을 N자리 이진수들 중에서 L개 이하의 비트만 1로 이루어진 이진수의 개수라고 정의  
@@ -203,7 +231,7 @@ int main() {
 </details>
 
 <details>
-<summary> 숫자 맞추기 - 2494</summary>
+<summary> <b>숫자 맞추기 - 2494</b></summary>
 <div markdown="1">   
 
 ```cpp
@@ -244,7 +272,7 @@ int tracker(int pos, int offset) {
             cout << pos+1 << 10-i << '\n';
             track(pos+1, offset);
         }
-        return;
+        return;  // ?
     }
 }
 
@@ -258,7 +286,7 @@ int main() {
 </details>
 
 <details>
-<summary> </summary>
+<summary><b> </b> </summary>
 <div markdown="1">   
 
 ```cpp
