--- a/_posts/운영체제/2019-03-07-[운영체제] 프로세스와 컨텍스트 스위칭.markdown
+++ b/_posts/운영체제/2019-03-07-[운영체제] 프로세스와 컨텍스트 스위칭.markdown
@@ -11,4 +11,4 @@ tags: os
 - 컴퓨터 사용하기 위해서 초기화 프로그램 필요 (bootstrap program : 시스템의 모든 부분 초기화)
 - 이벤트 발생 - 인터럽트로 알림 (시스템 콜에 의해서도 발생) 
 - 트랩(예외) : 에러나 운영체제의 서비스를 필요로 하는 사용자 프로그램으로부터의 특별한 요청으로부터 소프트웨어가 발생시킨 인터럽트
-- 
+- context switching :
